tests/NormalTests/paczka1/small_fuzzy/60257266.err
Error in line 1: oRK948m A417 13,8
Error in line 3: dU95uLzXAgZ A595 93,9
